--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pino": "^8.16.2"
   }
 }
