--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "pino": "^8.16.2"
   }
 }
